--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <prerequisites>
@@ -9,7 +7,7 @@
 
     <groupId>org.futureaspects.mojo</groupId>
     <artifactId>lognumber-maven-plugin</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.9.0</version>
     <packaging>maven-plugin</packaging>
 
     <name>maven-lognumber-plugin Maven Plugin</name>
@@ -20,7 +18,7 @@
         <connection>scm:git:https://git.dev-central.eu/fa/mojos/lognumber-maven-plugin</connection>
         <developerConnection>scm:git:https://git.dev-central.eu/fa/mojos/lognumber-maven-plugin</developerConnection>
         <url>https://git.dev-central.eu/fa/mojos/lognumber-maven-plugin</url>
-        <tag>HEAD</tag>
+        <tag>lognumber-maven-plugin-0.9.0</tag>
     </scm>
 
     <repositories>
