--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>org.futureaspects.mojo</groupId>
     <artifactId>lognumber-maven-plugin</artifactId>
-    <version>1.3.1</version>
+    <version>1.3.2-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>maven-lognumber-plugin Maven Plugin</name>
@@ -18,7 +18,7 @@
         <connection>scm:git:https://git.dev-central.eu/fa/mojos/lognumber-maven-plugin</connection>
         <developerConnection>scm:git:https://git.dev-central.eu/fa/mojos/lognumber-maven-plugin</developerConnection>
         <url>https://git.dev-central.eu/fa/mojos/lognumber-maven-plugin</url>
-        <tag>lognumber-maven-plugin-1.3.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <repositories>
