--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,16 @@
     </pluginRepositories>
 
     <distributionManagement>
-        <snapshotRepository>
-            <id>dc-snapshots</id>
-            <url>http://nexus.dev-central.eu/content/repositories/snapshots</url>
-        </snapshotRepository>
         <repository>
-            <id>dc-releases</id>
-            <url>http://nexus.dev-central.eu/content/repositories/releases</url>
+            <id>mcicd-releases</id>
+            <name>MCICD Artifactory Releases</name>
+            <url>https://artifactory.devops.telekom.de/artifactory/taf-releases</url>
         </repository>
+        <snapshotRepository>
+            <id>mcicd-snapshots</id>
+            <name>MCICD Artifatory Snapshots</name>
+            <url>https://artifactory.devops.telekom.de/artifactory/taf-snapshots</url>
+        </snapshotRepository>
     </distributionManagement>
     
     <properties>
@@ -93,6 +95,15 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.12.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -123,7 +134,6 @@
         <profile>
             <id>run-its</id>
             <build>
-
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
