--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>org.futureaspects.mojo</groupId>
     <artifactId>lognumber-maven-plugin</artifactId>
-    <version>1.3.4-SNAPSHOT</version>
+    <version>1.3.4</version>
     <packaging>maven-plugin</packaging>
 
     <name>Lognumber Maven Plugin</name>
@@ -18,7 +18,7 @@
         <connection>scm:git:https://github.com/smikesmike/lognumber-maven-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/smikesmike/lognumber-maven-plugin.git</developerConnection>
         <url>https://github.com/smikesmike/lognumber-maven-plugin.git</url>
-        <tag>HEAD</tag>
+        <tag>lognumber-maven-plugin-1.3.4</tag>
     </scm>
 
     <repositories>
