--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <prerequisites>
@@ -8,7 +7,7 @@
 
     <groupId>org.futureaspects.mojo</groupId>
     <artifactId>lognumber-maven-plugin</artifactId>
-    <version>1.3.5-SNAPSHOT</version>
+    <version>1.3.5</version>
     <packaging>maven-plugin</packaging>
 
     <name>Lognumber Maven Plugin</name>
@@ -19,7 +18,7 @@
         <connection>scm:git:https://github.com/smikesmike/lognumber-maven-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/smikesmike/lognumber-maven-plugin.git</developerConnection>
         <url>https://github.com/smikesmike/lognumber-maven-plugin.git</url>
-        <tag>HEAD</tag>
+        <tag>lognumber-maven-plugin-1.3.5</tag>
     </scm>
 
     <repositories>
